# glub

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  index.js  styles.css  test.sh
.github/workflows/: main.yml
data/: CMakeLists.txt  GLFWWindow.cpp  SDLWindow.cpp  SubmodulesUpdate.txt  WinAPIWindow.cpp  XLibWindow.cpp  libVersions.json  libraries.json  main.cpp
docs/: CNAME  index.html  index.js  styles.css
docs/data/: CMakeLists.txt  GLFWWindow.cpp  SDLWindow.cpp  cmake.txt  libraries.json  main.cpp
docs/js/: cmake.js  globals.js  helper.js  init.js  main.js  update.js
docs/main/: glfw-glad.txt  glfw-glew.txt  glfw.txt  sdl.txt  xlib-glew.txt  xlib.txt
js/: cmake.js  globals.js  helper.js  init.js  main.js
main/: xlib.txt
src/: main.cpp
test/: genProject.mjs  testCombos.txt
utils/: updateVersions.py
